[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/cardManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/eventManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/main.gd" type="Script" id=3]
[ext_resource path="res://scenes/bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enemyManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://music/musique-intro.wav" type="AudioStream" id=6]
[ext_resource path="res://music/ambiance0(introduction).wav" type="AudioStream" id=7]

[node name="main" type="Node2D"]
script = ExtResource( 3 )

[node name="cardManager" parent="." instance=ExtResource( 1 )]

[node name="eventManager" parent="." instance=ExtResource( 2 )]

[node name="bar" parent="." instance=ExtResource( 4 )]
position = Vector2( 5, 2 )
z_index = 5

[node name="enemyManager" parent="." instance=ExtResource( 5 )]

[node name="ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "ambience"

[node name="musique" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="chg_envi" from="." to="enemyManager" method="_on_main_chg_envi"]
[connection signal="giveCard" from="." to="cardManager" method="_on_main_giveCard"]
[connection signal="bilanStab" from="eventManager" to="." method="_on_eventManager_bilanStab"]
[connection signal="cardOk" from="eventManager" to="." method="_on_eventManager_cardOk"]
[connection signal="eventDone" from="eventManager" to="." method="_on_eventManager_eventDone"]
[connection signal="eventDone" from="eventManager" to="enemyManager" method="_on_eventManager_eventDone"]
[connection signal="faireEvenement" from="enemyManager" to="." method="_on_enemyManager_faireEvenement"]
[connection signal="finished" from="ambiance" to="." method="_on_ambiance_finished"]
[connection signal="finished" from="musique" to="." method="_on_musique_finished"]
